--- a/dolann.html
+++ b/dolann.html
@@ -34,10 +34,10 @@
       >
 
       <div class="navbar-nav">
-        <a href="feyy de lumiere.html">Home</a>
-        <a href="feyy de lumiere.html#about">Tentang saya</a>
-        <a href="feyy de lumiere.html#job">Kegiatan Saya</a>
-        <a href="feyy de lumiere.html#social">Social Media</a>
+        <a href="index.html">Home</a>
+        <a href="index.html#about">Tentang saya</a>
+        <a href="index.html#job">Kegiatan Saya</a>
+        <a href="index.html#social">Social Media</a>
       </div>
 
       <div class="navbar-extra">
@@ -132,10 +132,10 @@
       </div>
 
       <div class="links">
-        <a href="feyy de lumiere.html">Home</a>
-        <a href="feyy de lumiere.html#about">Tentang saya</a>
-        <a href="feyy de lumiere.html#job">Kegiatan Saya</a>
-        <a href="feyy de lumiere.html#social">Social Media</a>
+        <a href="index.html">Home</a>
+        <a href="index.html#about">Tentang saya</a>
+        <a href="index.html#job">Kegiatan Saya</a>
+        <a href="index.html#social">Social Media</a>
       </div>
 
       <div class="credit">
