--- a/gaming.html
+++ b/gaming.html
@@ -29,15 +29,15 @@
   <body>
     <!-- Navbar start -->
     <nav class="navbar" id="navbar">
-      <a href="feyy de lumiere.html" class="navbar-logo"
+      <a href="index.html" class="navbar-logo"
         >Dins<span> Website</span></a
       >
 
       <div class="navbar-nav">
-        <a href="feyy de lumiere.html">Home</a>
-        <a href="feyy de lumiere.html#about">Tentang saya</a>
-        <a href="feyy de lumiere.html#job">Kegiatan Saya</a>
-        <a href="feyy de lumiere.html#social">Social Media</a>
+        <a href="index.html">Home</a>
+        <a href="index.html#about">Tentang saya</a>
+        <a href="index.html#job">Kegiatan Saya</a>
+        <a href="index.html#social">Social Media</a>
       </div>
 
       <div class="navbar-extra">
@@ -100,10 +100,10 @@
       </div>
 
       <div class="links">
-        <a href="feyy de lumiere.html">Home</a>
-        <a href="feyy de lumiere.html#about">Tentang saya</a>
-        <a href="feyy de lumiere.html#job">Kegiatan Saya</a>
-        <a href="feyy de lumiere.html#social">Social Media</a>
+        <a href="index.html">Home</a>
+        <a href="index.html#about">Tentang saya</a>
+        <a href="index.html#job">Kegiatan Saya</a>
+        <a href="index.html#social">Social Media</a>
       </div>
 
       <div class="credit">
