--- a/cooking.html
+++ b/cooking.html
@@ -57,7 +57,7 @@
       <div class="row">
         <div class="product-card">
           <div class="product-image">
-            <img src="img/product/5.JPG" alt="product 1" />
+            <img src="img/product/5.jpg" alt="product 1" />
           </div>
           <div class="product-content">
             <h3>Sosis Bakar</h3>
@@ -65,7 +65,7 @@
         </div>
         <div class="product-card">
           <div class="product-image">
-            <img src="img/product/6.JPG" alt="product 1" />
+            <img src="img/product/6.jpg" alt="product 1" />
           </div>
           <div class="product-content">
             <h3>Cireng</h3>
