--- a/dolann.html
+++ b/dolann.html
@@ -54,7 +54,7 @@
       <div class="row">
         <div class="product-card">
           <div class="product-image">
-            <img src="img/product/7.JPG" alt="product 1" />
+            <img src="img/product/7.jpg" alt="product 1" />
           </div>
           <div class="product-content">
             <h3>Bukber</h3>
@@ -62,7 +62,7 @@
         </div>
         <div class="product-card">
           <div class="product-image">
-            <img src="img/product/8.JPG" alt="product 1" />
+            <img src="img/product/8.jpg" alt="product 1" />
           </div>
           <div class="product-content">
             <h3>Muncak Andong</h3>
@@ -70,7 +70,7 @@
         </div>
         <div class="product-card">
           <div class="product-image">
-            <img src="img/product/9.JPG" alt="product 1" />
+            <img src="img/product/9.jpg" alt="product 1" />
           </div>
           <div class="product-content">
             <h3>Muncak Andong</h3>
