--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <div class="navbar-extra">
         <a href="#" id="search"><i data-feather="search"></i></a>
-        <a href="#" id="menu"><i data-feather="menu"></i></a>
+        <a href="javascript:void(0)" id="menu"><i data-feather="menu"></i></a>
       </div>
     </nav>
     <!-- Navbar End -->
