--- a/dolann.html
+++ b/dolann.html
@@ -29,7 +29,7 @@
   <body>
     <!-- Navbar start -->
     <nav class="navbar" id="navbar">
-      <a href="feyy de lumiere.html" class="navbar-logo"
+      <a href="index.html" class="navbar-logo"
         >Dins<span> Website</span></a
       >
 
